--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_nationalize">NationalizeDB</string>
+
+    <string name="home_button">EXECUTE</string>
+    <string name="home_textInput">Name</string>
 </resources>
